Fix padding on mobile devices

--- a/src/site/styles/user/layout-fixes.scss
+++ b/src/site/styles/user/layout-fixes.scss
@@ -27,7 +27,7 @@
 
 /* styling for the footer (for imprint and such) */
 .markdown-preview-view {
-    padding: 0;
+    padding: 0 1em;
 }
 body {
     display: flex;
